deploy/retrieveUnpackaged/objects/Partner__c.object
<CustomObject>
    <description>partner custom object</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PartnerID__c</fullName>
        <description>Id of Partner (native object)</description>
        <label>PartnerID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Pay Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t pay commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit to this Opp-Acct (US only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Cloud Reseller only)–Credit Acct/DDI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Partner_Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Partner</label>
    <nameField>
        <displayFormat>CP-{0}</displayFormat>
        <label>Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>